# vector-tweaks

./: .gitignore  LICENSE  README.md  pyproject.toml  run.sh
embed-tune/: README.md  pyproject.toml  run.sh
embed-tune/embed_tune/dataset_creation/: EDA.ipynb  query_pair_extraction.py  scrapper.py
embed-tune/embed_tune/inference/: analysis.py  infer.py
embed-tune/embed_tune/training/: loader.py  main.py  model.py  train.py
vector_tweaks/dataset_creation/: scrapper.py  utils.py
vector_tweaks/training/: main.py
