[tool.poetry]
name = "embed-tune"
version = "0.1.0"
description = ""
authors = ["Francois Masson <francois-masson@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13 <3.14"
black = "^25.1.0"
mypy = "^1.15.0"
numpy = "^2.2.2"
opensearch-py = "^2.8.0"
openai = "^1.61.1"
pandas = "^2.2.3"
pandas-stubs = "^2.2.3.250308"
pyarrow = "^19.0.1"
pyarrow-stubs = "^17.19"
ruff = "^0.11.2"
seaborn = "^0.13.2"
torch = "^2.6.0"
tdqm = "^0.0.1"
types-tqdm = "^4.67.0.20250319"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.

lint.select = ["E", "F", "W", "COM", "T", "B006", "B023", "I", "TID"]
lint.ignore = ["E501"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
lint.per-file-ignores = {}

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
combine-as-imports = true
force-to-top = ["typing"]
force-single-line = true
force-wrap-aliases = true
lines-after-imports = 2
lines-between-types = 1
order-by-type = true

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.List".msg = "Use list instead of typing.List"
"typing.Dict".msg = "Use dict instead of typing.Dict"
"typing.Tuple".msg = "Use tuple instead of typing.Tuple"
"typing.Union".msg = "Use A | B instead"
"typing.Optional".msg = "Use A | None instead of typing.Optional"

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ['py313']
